# Gewachshaus

./: .deepsource.toml  .gitignore  CNAME  README.md  build.sh  clear_docker.sh  desktop.ini  start.sh  stop.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: custom.md
Gewachshaus/code/app/: settings.gradle
Gewachshaus/code/application/: README.md  package-lock.json
Gewachshaus/code/esp32_display/: README.md  platformio.ini
Gewachshaus/code/esp32_sensors/: platformio.ini
code/app/: local.properties
code/application/: .gitignore  README.md  package-lock.json  package.json
code/application/src-tauri/: Cargo.toml  tauri.conf.json
code/application/src-tauri/icons/: icon.icns
code/application/src-tauri/src/: main.rs
code/esp32/: platformio.ini
code/esp32_display/: .gitignore  README.md  compile_commands.json  platformio.ini
code/esp32_school/: platformio.ini
code/esp32_sensors/: README.md  platformio.ini
code/ino/: diagram.json  libraries.txt
code/www/: .gitignore  README.md  docker-compose.yml
img/: LPEM-LOGO_24bit_150x80.c
others/: Skizierung-2023-02-07-1743.excalidraw  Trap-2023-02-07-1743.excalidraw  materialenliste.xlsx  materialenliste_Team-C.xlsx  materialenliste_Team-C_ALL.xlsx  materialenliste_Team-C_School.xlsx  materialenliste_Team-C_v2_01-03-2023.xlsx  message.ino
others/blender/: .gitignore  Gewachshaus.mtl  test.mtl
others/doucmentation/: Gewächshaus.docx
others/pcb/: BOM_PCB_Gewachshaus_2023-02-24.csv  BOM_PCB_Gewachshaus_2023-03-01.csv  PCB_PCB_Gewachshaus_2023-02-25.json  PickAndPlace_PCB_Gewachshaus_2023-03-01.csv
(+276 files in other folders)
